...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/noData"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">
...
                    android:text="@string/list_is_empty"
                    android:textAppearance="?android:textAppearanceMedium"/>

            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/tv_shows_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
       
    </android.support.v4.widget.SwipeRefreshLayout>

...
